added game information to html and holder id for remaining guesses

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
     <div class="container">
         <div class="row" id="game">
-            
+            <div class="col-sm-2" ></div>
+            <div class="col-sm-8" >
+                <h3>Press Any Key to get started.</h3>    
+            </div>           
         </div>
     </div>
 
@@ -38,6 +41,13 @@
     </div>
 
     <div class="container">
+        <div class="row">
+            <div class="col-sm-4" ></div>
+            <div class="col-sm-4" >
+                <h5 id="guessesRemaining"></h5>    
+            </div>
+            <div class="col-sm-4" ></div>
+        </div>
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
