--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4" ></div>
+            <div class="col-sm-6" >
+                <div id="result">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4" ></div>
+            <div class="col-sm-6" >
+                <div id="scoresheet">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Insert External Scripting -->
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
