--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="padding: 15px;">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="padding: 15px;">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-6" >
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="padding: 15px;">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-6" >
