--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 <body>
 
     <div class="container">
+        <div class="row">
+            <div class="col-sm-2" ></div>
+            <div class="col-sm-8"  id="picture">
+                <img src="https://rhetoricandpopularculture.files.wordpress.com/2012/03/wp_elr_cast2_1280x800.jpg" class="img-fluid" alt="Everybody Loves Raymond">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
         <div class="row" id="game">
             <div class="col-sm-4" ></div>
             <div class="col-sm-8" >
@@ -30,7 +39,7 @@
         </div>
     </div>
 
-    <div class="container" style="padding: 15px;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
@@ -40,7 +49,7 @@
         </div>
     </div>
 
-    <div class="container" style="padding: 15px;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
@@ -57,7 +66,7 @@
         </div>
     </div>
 
-    <div class="container" style="padding: 15px;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-6" >
@@ -67,7 +76,7 @@
         </div>
     </div>
 
-    <div class="container" style="padding: 15px;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-6" >
