--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
 
+    <!-- Container for the Theme Picture -->
     <div class="container">
         <div class="row">
             <div class="col-sm-2" ></div>
@@ -30,6 +31,7 @@
         </div>
     </div>
 
+    <!-- Container for the Start of the Game Message -->
     <div class="container">
         <div class="row" id="game">
             <div class="col-sm-4" ></div>
@@ -39,6 +41,7 @@
         </div>
     </div>
 
+    <!-- Container for the Word to be Guessed -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
@@ -49,7 +52,9 @@
         </div>
     </div>
 
+    <!-- Container for Showing Guess information -->
     <div class="container">
+        <!-- Row for Showing How Many Guesses are Left -->
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
@@ -57,6 +62,8 @@
             </div>
             <div class="col-sm-4" ></div>
         </div>
+
+        <!-- Row for Showing What Letters Were Already Guessed -->
         <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-4" >
@@ -66,6 +73,7 @@
         </div>
     </div>
 
+    <!-- Container for Showing Game Satus Information  -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
@@ -76,6 +84,7 @@
         </div>
     </div>
 
+    <!-- Container for Showing A Running Scoresheet -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
