added flexibility to use the space bar to start the game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row" id="game">
             <div class="col-sm-4" ></div>
             <div class="col-sm-8" >
-                <h3>Press Any Key to get started.</h3>    
+                <h3>Press SpaceBar Star A Game.</h3>    
             </div>           
         </div>
     </div>
