made the instructions to start a new game visible or not dependent on whether a new game could be started or not

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
     <!-- Container for the Start of the Game Message -->
     <div class="container">
-        <div class="row" id="game">
+        <div class="row">
             <div class="col-sm-4" ></div>
             <div class="col-sm-8" >
-                <h3>Press SpaceBar Star A Game.</h3>    
+                <h3 id="game">Press SpaceBar to Start A Game.</h3>    
             </div>           
         </div>
     </div>
