--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <!-- Container for the Start of the Game Message -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-4" ></div>
+            <div class="col-sm-3" ></div>
             <div class="col-sm-8" >
-                <h3 id="game">Press SpaceBar to Start A Game.</h3>    
+                <h3 id="game">Press SpaceBar to Start A New Game.</h3>    
             </div>           
         </div>
     </div>
