--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12" >
-                                <h3 id="game">Press SpaceBar to Start A New Game.</h3>    
+                                <h3 id="game">Press Spacebar To Start A New Game.</h3>    
                         </div>           
                     </div>
     </div>
