fooling around with styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="row">
             <div class="col-sm-2" ></div>
             <div class="col-sm-8"  id="picture">
-                <img src="https://rhetoricandpopularculture.files.wordpress.com/2012/03/wp_elr_cast2_1280x800.jpg" class="img-fluid" alt="Everybody Loves Raymond">
+                <!-- <img src="https://rhetoricandpopularculture.files.wordpress.com/2012/03/wp_elr_cast2_1280x800.jpg" class="img-fluid" alt="Everybody Loves Raymond"> -->
+                <img src="./assets/images/EverybodyLovesRaymong.jpg" class="img-fluid" alt="Everybody Loves Raymond"> 
+
 
                     <!-- Container for the Start of the Game Message -->
                     <div class="container">
@@ -40,41 +42,34 @@
         </div>
     </div>
 
-
-
     <!-- Container for the Word to be Guessed -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-4" ></div>
-            <div class="col-sm-4" >
-                <h5 id="hiddenword"></h5>    
+            <div class="col-sm-2" ></div>
+            <div class="col-sm-8" >
+                    <h5 id="hiddenword"></h5>   
             </div>
-            <div class="col-sm-4" ></div>
+            <div class="col-sm-2" ></div>
         </div>
     </div>
 
-    <!-- Container for Showing Guess information -->
     <div class="container">
-        <!-- Row for Showing How Many Guesses are Left -->
         <div class="row">
             <div class="col-sm-4" ></div>
-            <div class="col-sm-4" >
+            <div class="col-sm-4">
                 <h5 id="guessesRemaining"></h5>    
             </div>
             <div class="col-sm-4" ></div>
         </div>
-
-        <!-- Row for Showing What Letters Were Already Guessed -->
         <div class="row">
             <div class="col-sm-4" ></div>
-            <div class="col-sm-4" >
+            <div class="col-sm-4">
                 <h5 id="guesses"></h5>    
             </div>
             <div class="col-sm-4" ></div>
         </div>
     </div>
 
-    <!-- Container for Showing Game Satus Information  -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
@@ -85,7 +80,6 @@
         </div>
     </div>
 
-    <!-- Container for Showing A Running Scoresheet -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
