updated comments and some more styling

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
     </div>
 
+    <!-- Container for Showing Guess information -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
@@ -61,15 +62,18 @@
             </div>
             <div class="col-sm-4" ></div>
         </div>
+        
+        <!-- Row for Showing What Letters Were Already Guessed -->
         <div class="row">
             <div class="col-sm-4" ></div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <h5 id="guesses"></h5>    
             </div>
-            <div class="col-sm-4" ></div>
+            <div class="col-sm-2" ></div>
         </div>
     </div>
 
+    <!-- Container for Showing Game Satus Information  -->
     <div class="container">
         <div class="row">
             <div class="col-sm-4" ></div>
@@ -77,16 +81,19 @@
                 <div id="result">
                 </div>
             </div>
+            <div class="col-sm-2" ></div>
         </div>
     </div>
 
+    <!-- Container for Showing A Running Scoresheet -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-4" ></div>
-            <div class="col-sm-6" >
+            <div class="col-sm-2" ></div>
+            <div class="col-sm-8" >
                 <div id="scoresheet">
                 </div>
             </div>
+            <div class="col-sm-2" ></div>
         </div>
     </div>
 
