removed the loop off the theme song so it doesn't become annoying and only plays once

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <!-- found this suggestion on stack overflow and it worked through the published site!!!! -->
     <iframe src="./assets/audio/250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-    <audio id="jp_audio_0" autoplay loop preload="metadata">
+    <audio id="jp_audio_0" autoplay preload="metadata">
         <source src="./assets/audio//Everybody%20Loves%20Raymond.mp3" type="audio/mp3">
     </audio> 
 
